--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
       "@/config/*": ["src/config/*"],
       "@/database/*": ["src/database/*"],
       "@/modules/*": ["src/modules/*"],
-      "@/shared/*": ["src/shared/*"],
-      "@/health/*": ["src/health/*"]
+      "@/shared/*": ["src/shared/*"]
     }
   }
 }
