--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.2.6",
     "@nestjs/typeorm": "^10.0.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.7.3",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
