--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/typeorm": "^10.0.2",
+    "@nodecfdi/cfdi-core": "^1.0.1",
+    "@nodecfdi/sat-ws-descarga-masiva": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "google-auth-library": "^10.1.0",
     "googleapis": "^152.0.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "openai": "^5.9.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
